[package]
name = "VoluMod-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client","gateway","model","builder","voice","rustls_backend", "cache"] }
songbird = { version = "0.4", features = ["serenity","receive"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
deadpool-postgres = "0.12"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
wait-timeout = "0.2"
opus = "0.3"
discortp = "0.6"

[dev-dependencies]
# testing utilities
reqwest = { version = "0.12", features = ["json"] }
